fix(notificationPanel): title overlaps with toggle button (#7938)

--- a/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.scss
+++ b/packages/ibm-products-web-components/src/components/notification-panel/notification-panel.scss
@@ -29,7 +29,6 @@ $block-class-action-set: #{$prefix}--action-set;
 :host(#{$prefix}-notification-panel) {
   .c4p--notifications-panel__do-not-disturb-toggle {
     display: block;
-    margin-block-start: -$spacing-05;
   }
 }
 :host(#{$prefix}-notification-panel)
